--- a/Vistaaa/Resources/Styles/Styles.xaml
+++ b/Vistaaa/Resources/Styles/Styles.xaml
@@ -81,6 +81,13 @@
         <Setter Property="IsVisible" Value="False"/>
     </Style>
 
+    <Style x:Key="infoLabel" TargetType="Label">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontFamily" Value="Franklin Gothic"/>
+        <Setter Property="FontAttributes" Value="Bold"/>
+        <Setter Property="TextColor" Value="DarkBlue"/>
+    </Style>
+
     <Style x:Key="gradientFooter" TargetType="StackLayout">
         <Setter Property="Background">
             <Setter.Value>
